Fix spacing when event is unpaid

--- a/static/style.css
+++ b/static/style.css
@@ -141,6 +141,11 @@ span{
   z-index: 1;
 }
 
+.event_free{
+  top: 0px;
+  margin-bottom: 25px;
+}
+
 .event_card{
   background-color: white;
   border: 1px solid #DEDEDE;
